# course-machine-learning-for-geotechnics-intro

./: .gitattributes  .gitignore  00_setup.ipynb  01_eda_cpt.ipynb  02_metrics_and_ml_intro.ipynb  03_training_evaluation.ipynb  EXERCISES.md  README.md  SETUP.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreate.sh
.github/: README_NOTEBOOKS.md  copilot-instructions.md
data/model_ready/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
notebooks/: setup.ipynb
profiling_reports/: .gitkeep
